--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,19 @@
 <!doctype html>
+<head>
+<!-- <meta http-equiv="refresh" content="5" > -->
+</head>
 <html>
    <body>
 
       <h1>Price Chart</h1>
+      <ol> 
+<!-- For loop logic of jinja template 
+{%for i in range(0, len)%} 
+  
+    <li>{{Pokemons[i]}}</li> 
+{%endfor%} 
+  -->
+</ol> 
 
       <p>wwwwwwwwwwwwwwww</p>
 
